[gd_scene load_steps=10 format=2]

[ext_resource path="res://VT323-Regular (3).ttf" type="DynamicFontData" id=1]
[ext_resource path="res://look.com.ua-91289.jpg" type="Texture" id=2]
[ext_resource path="res://harjutus8.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 45
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Windowsxppilt" type="TextureRect" parent="."]
margin_right = 1089.0
margin_bottom = 521.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Kivi" type="Button" parent="."]
margin_left = 17.0
margin_top = 483.0
margin_right = 200.0
margin_bottom = 553.0
custom_fonts/font = SubResource( 1 )
text = "Kivi"

[node name="Paber" type="Button" parent="."]
margin_left = 223.0
margin_top = 480.0
margin_right = 406.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 1 )
text = "Paber"

[node name="Käärid" type="Button" parent="."]
margin_left = 429.0
margin_top = 481.0
margin_right = 612.0
margin_bottom = 551.0
custom_fonts/font = SubResource( 1 )
text = "Käärid"

[node name="Pealkiri" type="RichTextLabel" parent="."]
margin_left = 289.0
margin_top = 27.0
margin_right = 711.0
margin_bottom = 106.0
custom_fonts/normal_font = SubResource( 2 )
text = "KIVI-PABER-KÄÄRID"

[node name="Punktid1" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 39.0
margin_right = 232.0
margin_bottom = 108.0
custom_fonts/normal_font = SubResource( 3 )
text = "Punktid: "

[node name="Punktid2" type="RichTextLabel" parent="."]
margin_left = 732.0
margin_top = 31.0
margin_right = 957.0
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 3 )
text = "Punktid: "

[node name="Valik1" type="RichTextLabel" parent="."]
margin_left = 83.0
margin_top = 257.0
margin_right = 383.0
margin_bottom = 389.0
custom_fonts/normal_font = SubResource( 4 )

[node name="Valik2" type="RichTextLabel" parent="."]
margin_left = 694.0
margin_top = 264.0
margin_right = 994.0
margin_bottom = 396.0
custom_fonts/normal_font = SubResource( 4 )

[node name="Tulemus" type="RichTextLabel" parent="."]
margin_left = 387.0
margin_top = 167.0
margin_right = 605.0
margin_bottom = 226.0
custom_fonts/normal_font = SubResource( 5 )

[node name="Skor" type="RichTextLabel" parent="."]
margin_left = 292.0
margin_top = 92.0
margin_right = 698.0
margin_bottom = 213.0
custom_fonts/normal_font = SubResource( 6 )

[connection signal="pressed" from="Kivi" to="." method="_on_Kivi_pressed"]
[connection signal="pressed" from="Paber" to="." method="_on_Paber_pressed"]
[connection signal="pressed" from="Käärid" to="." method="_on_Krid_pressed"]
